# sudoku-solver-web

./: .dockerignore  .gitignore  .prettierrc.toml  Dockerfile  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  mypy.ini  pyproject.toml  readme.md  requirements.txt
mysite/mysite/: settings.py  urls.py
mysite/sudoku_solver/: admin.py  apps.py  fields.py  forms.py  mixins.py  models.py  urls.py  views.py  widgets.py
mysite/sudoku_solver/migrations/: 0001_initial.py  0002_board_changed_board_created_board_description.py  0003_alter_board_changed.py  0004_alter_board_options.py
mysite/sudoku_solver/solver/: __init__.py  basic_fish.py  basic_strategy.py  box_line_reduction.py  brute_forcer.py  hidden_single.py  hidden_subset.py  intersection_strategy.py  multi_containers_strategy.py  naked_single.py  naked_subset.py  pointing_subset.py  single_chain.py  solver.py  step_solver.py  strategy.py  wing_strategy.py  x_chain.py  xyz_wing.py  y_wing.py
mysite/sudoku_solver/solver/strategies/: __init__.py  basic_fish.py  basic_strategy.py  box_line_reduction.py  exceptions.py  hidden_single.py  hidden_subset.py  intersection_strategy.py  multi_containers_strategy.py  naked_single.py  naked_subset.py  pointing_subset.py  single_chain.py  strategy.py  wing_strategy.py  x_chain.py  xyz_wing.py  y_wing.py
mysite/sudoku_solver/solver/strategies/basic/: __init__.py  basic_strategy.py  hidden_single.py  hidden_subset.py  naked_single.py  naked_subset.py
mysite/sudoku_solver/solver/strategies/basic/intersection/: box_line_reduction.py  intersection_strategy.py  pointing_subset.py
mysite/sudoku_solver/solver/strategies/multi_containers/: __init__.py  basic_fish.py  multi_containers_strategy.py  single_chain.py  x_chain.py
mysite/sudoku_solver/solver/strategies/wing/: __init__.py  wing_strategy.py  xyz_wing.py  y_wing.py
mysite/sudoku_solver/static/: tsconfig.json
mysite/sudoku_solver/static/js/: board.ts  canvas-renderer.ts  cell.ts  header.ts  index-guest.ts  index-user.ts  index.ts  script.ts  utils.ts  win-notification.ts
mysite/sudoku_solver/static/styles/: admin-board-widget.css  board-action.css  board-delete-confirm.css  board-list.css  board-update.css  board-widget.css  board.css  footer.css  game.css  header.css  login.css  password-widget.css  style.css  win-popup.css
mysite/sudoku_solver/static/ts/: admin-board-widget.ts  board-widget.ts  board.ts  canvas-renderer.ts  cell.ts  header.ts  index.ts  password-widget.ts  utils.ts  win-notification.ts
mysite/sudoku_solver/sudoku/: __init__.py  cell.py  cells_holder.py  container.py  exceptions.py  grid.py  history_manager.py
mysite/sudoku_solver/templates/: base.html  board-delete-confirm.html  board-list-create.html  board-list.html  board-update.html  board.html  game.html  header.html  index.html  password-widget.html  win-popup.html
mysite/sudoku_solver/templates/registration/: change-password.html  login.html  signup.html
mysite/sudoku_solver/utils/: board_utils.py
mysite/templates/: 404.html  500.html
mysite/templates/admin/: base_site.html  board-widget.html
mysite/templates/registration/: login.html  password_change_form.html  signup.html
