[project]
name = "dn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.7",
    "events>=0.5",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "whitenoise>=6.9.0",
]

[dependency-groups]
debug = [
    "django-debug-toolbar>=5.0.1",
]
dev = [
    "django-stubs>=5.1.3",
    "djlint>=1.36.4",
    "events-stubs",
    "mypy>=1.15.0",
    "ruff>=0.11.2",
]

[tool.ruff]
line-length = 119

[tool.djlint]
profile = "django"
# max_line_length = 119
max_attribute_length = 100
max_blank_lines = 1
format_css = true
format_js = true

[tool.mypy]
# Coverage
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
warn_incomplete_stub = true

# Any and Generics
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true

# Something unused
warn_unused_configs = true
warn_unused_ignores = true

# Possible errors
disallow_any_unimported = true
warn_redundant_casts = true
strict_equality = true
strict_concatenate = true
warn_unreachable = true
no_implicit_reexport = true

# Extra
strict = true

# django-stubs setup
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "mysite.mysite"

[tool.uv.sources]
events-stubs = { git = "https://github.com/promontorium/events-stubs" }

# Voodoo
[[tool.mypy.overrides]]
module = "mysite.manage"
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "mysite.sudoku_solver.admin"
disallow_any_generics = false

[[tool.mypy.overrides]]
module = "mysite.sudoku_solver.forms"
disallow_any_generics = false
disallow_any_explicit = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "mysite.sudoku_solver.mixins"
disallow_any_explicit = false

[[tool.mypy.overrides]]
module = "mysite.sudoku_solver.fields"
disallow_any_explicit = false

[[tool.mypy.overrides]]
module = "mysite.sudoku_solver.widgets"
disallow_any_explicit = false

[[tool.mypy.overrides]]
module = "mysite.sudoku_solver.views"
disallow_any_generics = false
warn_return_any = false
disallow_any_explicit = false
disallow_any_decorated = false
disable_error_code = ["attr-defined", "union-attr"]
